@@ -65,12 +65,18 @@
 # disconnected, or has disconnected and still hasn't exceeded its session
 # expiry interval (MQTT v5).
 #
-# See also the max_connections setting, which applies to listeners. If you set
-# global_max_clients to 1000 and max_connections on a listener to 10, then that
-# means only 10 simultaneous connections will be allowed at once, with an
-# overall maximum of 1000 client sessions.
+# See also the global_max_connections setting, and the max_connections setting,
+# which applies to listeners. If you set global_max_clients to 1000 and
+# max_connections on a listener to 10, then that means only 10 simultaneous
+# connections will be allowed at once, with an overall maximum of 1000 client
+# sessions.
 #
 #global_max_clients -1
+
+# The maximum number of currently connected clients to allow across the whole
+# broker.
+# See also the global_max_clients and max_connections settings.
+#global_max_connections -1
 
 # QoS 1 and 2 messages will be allowed inflight per client until this limit
 # is exceeded.  Defaults to 0. (No maximum)
